Implementacion del nuevo diseño a medias por ahora solo funcionan ciertas cosas del panel de musica por conflictos de bootstrap y materialize, es necesario correr las migraciones de nuevo debibo al campo de verificacion de usuario y cnstruir el adjuntar el documento de identidad

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
         "nesbot/carbon": "^1.25",
+        "simplesoftwareio/simple-qrcode": "~2",
         "wapmorgan/mp3info": "^0.0.2",
-        "simplesoftwareio/simple-qrcode": "~2"
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
