Login de Proveedor Completo

--- a/.env
+++ b/.env
@@ -22,12 +22,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mail.leipel.com
+MAIL_HOST=secure237.inmotionhosting.com
 MAIL_PORT=465
 MAIL_USERNAME=webmaster@leipel.com
-MAIL_PASSWORD=WebMaster1
+MAIL_PASSWORD=Leipel2017
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=webmaster@leipel.com.ec
+MAIL_FROM_ADDRESS=webmaster@leipel.com	
 MAIL_FROM_NAME=LEIPEL
 
 PUSHER_APP_ID=
