--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
         "nesbot/carbon": "^1.25",
+        "optimus/heimdal": "~1.0",
         "simplesoftwareio/simple-qrcode": "~2",
         "spatie/laravel-fractal": "4.0",
         "tymon/jwt-auth": "^1.0.0-beta.3@dev",
