--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ APP_KEY=base64:YL2y5FGHG8Xra4X6YrSdu83E7duUyAI24J31qrsCqlE=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=https://www.leipel.com
+JWT_SECRET=wjlAqY53cCU6usZWA3Ie8jGI4U3imESD
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
