error en el cual no sumaba las ventas al balance general solucionado

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=production
 APP_KEY=base64:YL2y5FGHG8Xra4X6YrSdu83E7duUyAI24J31qrsCqlE=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=https://www.leipel.com
+APP_URL=https://www.prueba.leipel.com
 JWT_SECRET=wjlAqY53cCU6usZWA3Ie8jGI4U3imESD
 
 DB_CONNECTION=mysql
