- se arreglo pie de pag en que es leipel? - se arreglo pie de pag en terminos de condiciones - se mejoro vista de reset password y se le agrego el correo

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=production
 APP_KEY=base64:YL2y5FGHG8Xra4X6YrSdu83E7duUyAI24J31qrsCqlE=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=https://www.prueba.leipel.com
+APP_URL=http://localhost/www/Leipel/public/
 JWT_SECRET=zE9Btvle2bJTJoGKSNeHsLJV7NNLCHYK
 
 DB_CONNECTION=mysql
