Cambios en la exepcion ModelNotFound de laravel, ademas de los controladores de compra de contenido

--- a/.env
+++ b/.env
@@ -2,8 +2,10 @@ APP_NAME=Leipel
 APP_ENV=production
 APP_KEY=base64:YL2y5FGHG8Xra4X6YrSdu83E7duUyAI24J31qrsCqlE=
 APP_DEBUG=true
+APP_LOG=daily
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost/www/Leipel/public/
+ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,SuperAdmin
+APP_URL=http://leipel.com
 JWT_SECRET=zE9Btvle2bJTJoGKSNeHsLJV7NNLCHYK
 
 DB_CONNECTION=mysql
@@ -13,9 +15,10 @@ DB_DATABASE=intire6_leipel_actual
 DB_USERNAME=root
 DB_PASSWORD=
 
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
