Agregacion de variable de entorno para manejo de ambientes de facturas para datil Modificacion de correos de bienvenida y pre-registro a los usuarios proveedores Modificacion de rutas de los contenidos en backend Modificacion de las graficas para contenido en backend Agregacion de actualizacion de artista para el album Mostrar PDF del ruc para los usuarios en backend Desactivar la opcion de generar factura en backend para los pagos que no estan aceptados Archivos modificados: - Controladores: 	- AdminContentController 	- AdminController 	- AlbumsController 	- HomeController - Visats: 	- status_applys_aproval.blade.php 	- statusSellerAproval.blade.php 	- Clients.blade.php 	- PaymentsClients.blade.php 	- Seller.blade.php 	- Albums.blade.php 	- Books.blade.php 	- Movies.blade.php 	- Single.blade.php 	- Content.blade.php 	- app.blade.php 	- SalesTickets.blade.php 	- Modales: 		- SellerViewsModals.blade.php - .env

--- a/.env
+++ b/.env
@@ -46,3 +46,5 @@ FACEBOOK_SECRET=30a7707c5762f77be28f1fe0480a672a
 
 TWITTER_ID=3ViUyES1FTvFurw0Ge8ncu6QZ
 TWITTER_SECRET=Lup0XAw3DrXbfq2HpZuuyrkBXGso1L45EDoGsXpul44bVlLJzz
+
+AMB_DATIL = 1
