--- a/public/.htaccess
+++ b/public/.htaccess
@@ -23,3 +23,6 @@ RewriteCond %{HTTP_HOST} ^www\.productora\.leipel\.com$
 RewriteCond %{REQUEST_URI} !^/[0-9]+\..+\.cpaneldcv$
 RewriteRule ^/?$ "http\:\/\/productora\.leipel\.com\/seller_login" [R=301,L]
 
+php_value upload_max_filesize 10M
+php_value post_max_size 20M
+php_value max_execution_time 180
