--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
@@ -28,7 +28,7 @@ MAIL_PORT=465
 MAIL_USERNAME=webmaster@leipel.com
 MAIL_PASSWORD=leipel2018.
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=webmaster@leipel.com	
+MAIL_FROM_ADDRESS=webmaster@leipel.com
 MAIL_FROM_NAME=Leipel
 
 PUSHER_APP_ID=
