--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "acekyd/laravelmp3": "^1.0",
         "arcanedev/log-viewer": "4.3.*",
+        "barryvdh/laravel-cors": "^0.11.0",
         "guzzlehttp/guzzle": "^6.3",
         "howtomakeaturn/pdfinfo": "1.*",
         "laracasts/flash": "^3.0",
