--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "torann/geoip": "^1.0",
         "tymon/jwt-auth": "^1.0.0-beta.3@dev",
         "wapmorgan/mp3info": "^0.0.2",
-        "yajra/laravel-datatables-oracle": "~8.0"
+        "yajra/laravel-datatables-oracle": "~8.0",
+        "barryvdh/laravel-cors": "0.8.x@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
